--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 }
 
 hr {
-  width: 400px;
+  width: 300px;
   border-top: 3px solid #f8f8f8;
   border-bottom: 2px solid rgba(0, 0, 0, 0.2);
 }
@@ -148,6 +148,10 @@ hr {
 }
 
 /* CONTACT */
+.about {
+  text-align: center;
+}
+
 .email {
   text-decoration: none;
   color: #4a6774;
